--- a/server/public/index.html
+++ b/server/public/index.html
@@ -21,7 +21,9 @@
   <link rel="stylesheet" href="styles/style.css">
 </head>
 
-<body>
+<body ng-app="myApp">
+
+  <main ng-view></main>
 
 </body>
 
