--- a/server/public/index.html
+++ b/server/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Food-Tracker</title>
-
+  <link href="https://fonts.googleapis.com/css?family=Roboto|Rammetto+One" rel="stylesheet">
   <script type="text/javascript" src="vendors/angular/angular.min.js"></script>
   <script type="text/javascript" src="vendors/angular-route/angular-route.min.js"></script>
 
@@ -17,6 +17,7 @@
   <script src="vendors/angular-material/angular-aria.min.js" charset="utf-8"></script>
   <script src="vendors/angular-material/angular-messages.min.js" charset="utf-8"></script>
   <script src="vendors/angular-material/angular-material.min.js" charset="utf-8"></script>
+
 
   <link rel="stylesheet" href="styles/style.css">
 </head>
