--- a/server/public/index.html
+++ b/server/public/index.html
@@ -10,6 +10,7 @@
   <script type="text/javascript" src="scripts/controllers/testing.controller.js"></script>
   <script type="text/javascript" src="scripts/controllers/login.controller.js"></script>
   <script type="text/javascript" src="scripts/controllers/user.controller.js"></script>
+  <script type="text/javascript" src="scripts/controllers/goals.controller.js"></script>
   <script type="text/javascript" src="scripts/services/user.service.js"></script>
 
   <link href="vendors/angular-material/angular-material.min.css" rel="stylesheet" type="text/css">
