remove view swapping with adding meals, brought to modal

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -3,8 +3,11 @@
 <head>
   <title>fit.me</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+
   <script type="text/javascript" src="vendors/angular/angular.min.js"></script>
   <script type="text/javascript" src="vendors/angular-route/angular-route.min.js"></script>
+  <script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.9.0.js"></script>
 
   <script type="text/javascript" src="scripts/client.js"></script>
   <script type="text/javascript" src="scripts/controllers/testing.controller.js"></script>
@@ -19,6 +22,8 @@
   <script src="vendors/angular-material/angular-aria.min.js" charset="utf-8"></script>
   <script src="vendors/angular-material/angular-messages.min.js" charset="utf-8"></script>
   <script src="vendors/angular-material/angular-material.min.js" charset="utf-8"></script>
+
+
 
 
   <link rel="stylesheet" href="styles/style.css">
