created service, able to add meal entry from favorites list

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -16,6 +16,7 @@
   <script type="text/javascript" src="scripts/controllers/meals.controller.js"></script>
   <script type="text/javascript" src="scripts/controllers/goals.controller.js"></script>
   <script type="text/javascript" src="scripts/services/user.service.js"></script>
+  <script type="text/javascript" src="scripts/services/meals.service.js"></script>
 
   <link href="vendors/angular-material/angular-material.min.css" rel="stylesheet" type="text/css">
   <script src="vendors/angular-material/angular-animate.min.js" charset="utf-8"></script>
