--- a/server/public/index.html
+++ b/server/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>fit.me</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto|Open+Sans|Gamja+Flower" rel="stylesheet">
   <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
 
   <script type="text/javascript" src="vendors/angular/angular.min.js"></script>
