--- a/server/public/index.html
+++ b/server/public/index.html
@@ -6,7 +6,7 @@
 
   <script type="text/javascript" src="vendors/angular/angular.min.js"></script>
   <script type="text/javascript" src="vendors/angular-route/angular-route.min.js"></script>
-  <script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.9.0.js"></script>
+  <script src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.9.0.js"></script>
 
   <script type="text/javascript" src="scripts/client.js"></script>
   <script type="text/javascript" src="scripts/controllers/testing.controller.js"></script>
