--- a/server/public/index.html
+++ b/server/public/index.html
@@ -14,6 +14,7 @@
   <script type="text/javascript" src="scripts/controllers/user.controller.js"></script>
   <script type="text/javascript" src="scripts/controllers/meals.controller.js"></script>
   <script type="text/javascript" src="scripts/controllers/goals.controller.js"></script>
+  <script type="text/javascript" src="scripts/controllers/history.controller.js"></script>
   <script type="text/javascript" src="scripts/services/user.service.js"></script>
   <script type="text/javascript" src="scripts/services/meals.service.js"></script>
 
