--- a/server/public/index.html
+++ b/server/public/index.html
@@ -25,7 +25,7 @@
   <script src="vendors/angular-material/angular-material.min.js" charset="utf-8"></script>
 
 
-
+  <link rel="icon" type="image/png" href="./favicon.ico?v=2">
   <link rel="stylesheet" href="styles/style.css">
 </head>
 
